--- a/flexdashboard.RMD
+++ b/flexdashboard.RMD
@@ -165,12 +165,12 @@ bmt_tidy.df <- bmt.df %>%
 
 ```
 
-Column {data-width=650}
+{data-width=650}
 -----------------------------------------------------------------------
 
-### Chart A
+### Chart 1: Shooting Percentage by Type (Lakers 08-09)
 
-```{r plot 1 - lakers, echo = FALSE}
+```{r plot 1 - lakers, echo = FALSE, fig.dim = c(4, 6)}
 flex_plot1 <- lakers.df %>%
   filter(etype %in% "shot", quarter %in% 1:4) %>%
   group_by(date, quarter, type) %>%
@@ -204,12 +204,12 @@ flex_plot1 %>%
   )
 ```
 
-Column {data-width=350}
+{data-width=350}
 -----------------------------------------------------------------------
 
-### Chart B
+### Chart 2: Text-derived Associations with Rating
 
-```{r plot 2 - disney, echo = FALSE}
+```{r plot 2 - disney, echo = FALSE, fig.dim = c(2, 2)}
 flex_plot2 <- disney.df %>%
   pivot_longer(
     cols      = contains(c("n_", "avg")),
@@ -240,9 +240,9 @@ flex_plot2 <- disney.df %>%
 ggplotly(flex_plot2)
 ```
 
-### Chart C
+### Chart 3: Distribution of Event Times by Type and Group
 
-```{r plot 3 - bmt, echo = FALSE}
+```{r plot 3 - bmt, echo = FALSE, fig.dim = c(2, 2)}
 
 #group by risk_group and event type, grab the mean and median time till event
 bmt_med.df <- bmt_tidy.df %>%
