--- a/flexdashboard.RMD
+++ b/flexdashboard.RMD
@@ -89,7 +89,7 @@ remove(lakers)
 
 disney.df <- read_csv("./data/disneyland_reviews.csv",
                       na = c("missing"),
-                      show_col_types = FALSE) %>%
+                      show_col_types = FALSE) %>% 
   janitor::clean_names() %>%
   rename(
     id       = review_id,
@@ -170,7 +170,7 @@ bmt_tidy.df <- bmt.df %>%
 
 ### Chart 1: Shooting Percentage by Type (Lakers 08-09)
 
-```{r plot 1 - lakers, echo = FALSE, fig.dim = c(4, 6)}
+```{r plot 1 - lakers, echo = FALSE, fig.height = 4, fig.width = 4}
 flex_plot1 <- lakers.df %>%
   filter(etype %in% "shot", quarter %in% 1:4) %>%
   group_by(date, quarter, type) %>%
@@ -209,7 +209,7 @@ flex_plot1 %>%
 
 ### Chart 2: Text-derived Associations with Rating
 
-```{r plot 2 - disney, echo = FALSE, fig.dim = c(2, 2)}
+```{r plot 2 - disney, echo = FALSE, fig.height = 4, fig.width = 2}
 flex_plot2 <- disney.df %>%
   pivot_longer(
     cols      = contains(c("n_", "avg")),
@@ -242,19 +242,13 @@ ggplotly(flex_plot2)
 
 ### Chart 3: Distribution of Event Times by Type and Group
 
-```{r plot 3 - bmt, echo = FALSE, fig.dim = c(2, 2)}
+```{r plot 3 - bmt, echo = FALSE, fig.height = 6, fig.width = 5}
 
 #group by risk_group and event type, grab the mean and median time till event
 bmt_med.df <- bmt_tidy.df %>%
   group_by(group) %>%
   summarise(median_time = median(event_time))
 
-# bmt_sum.df <- bmt_tidy.df %>%
-#   group_by(group, event_type) %>%
-#   summarise(
-#     median_time = median(event_time),
-#     mean_time = mean(event_time)
-#   ) 
 
 #Prep the data for the flexdashboard
 flex.bmt.gg <- bmt_tidy.df %>%
@@ -284,7 +278,6 @@ event_time.gg <- flex.bmt.gg +
 event_type.gg <- flex.bmt.gg + facet_wrap(~event_type, scales = "free")
 
 ggplotly(event_type.gg)
-
 
 ```
 
